try to fix image rescaling on mobile again pt 2

--- a/assets/main.css
+++ b/assets/main.css
@@ -48,6 +48,7 @@ img {
   vertical-align: middle; }
 
 .content {
+  max-height: 400px;
   min-width: 450px;
   height: auto;
 }
